# ros2_optitrack_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/optitrack_bridge2/: optitrack_bridge_final_node.h  optitrack_bridge_node.h  optitrack_bridge_px4_node.h
src/: main.cpp  natnet_wrapper.cpp  optitrack_bridge_final.cpp  optitrack_bridge_node.cpp  optitrack_bridge_px4.cpp
